# fig

./: .gitignore  Cargo.toml  README.md  flake.nix  test.txt  test2.txt
fig-plugin-runner/: Cargo.toml
fig-plugin-runner/src/: lib.rs
src/: add.rs  cmd.rs  deploy.rs  info.rs  lib.rs  list.rs  log_utils.rs  main.rs  namespace.rs  plugin.rs  purge.rs  repository.rs  target.rs  template.rs
src/commands/: add.rs  clone.rs  cmd.rs  deploy.rs  info.rs  init.rs  list.rs  mod.rs  namespace.rs  purge.rs  status.rs
src/plugin/: mod.rs
