[package]
edition = "2021"
name    = "fig"
version = "0.3.7"

[features]
commands = []

[dependencies]
clap        = { version = "4.1", features = ["derive"] }
color-eyre  = { version = "0.6.2" }
directories = { version = "5.0" }
git2        = { version = "0.17" }
log         = { version = "0.4", features = ["kv_unstable"] }
owo-colors  = { version = "3.5.0" }
serde       = { version = "1.0", features = ["derive"] }
serde_json  = { version = "1.0" }
simplelog   = { version = "0.12.1" }
thiserror   = { version = "1.0" }
wild        = { version = "2.1.0" }
