[package]
edition = "2021"
name = "fig"
version = "0.4.0"
authors = ["Tristan Fox"]
description = "A modern, powerful, and truly cross-platform configuration manager"

[features]

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"

clap = { version = "4.1", features = ["derive"] }
color-eyre = { version = "0.6.2" }
directories = { version = "5.0" }
git2 = { version = "0.18" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = { version = "1.0" }
wild = { version = "2.1.0" }
url = "2.4"
